--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <script src="./script.js" defer></script>
-    <title>Etch-A-Sketch</title>
+    <title>Etch-A-Sketch helooo</title>
 </head>
 <body>
     <div id="main">
